[tool.poetry]
name = "dealroom-urlextract"
version = "0.1.0"
description = ""
authors = ["GuillermoDR <70137647+GuillermoDR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tldextract = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
