[tool.poetry]
name = "dealroom-urlextract"
version = "0.1.0"
description = ""
authors = ["GuillermoDR <70137647+GuillermoDR@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tldextract = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-pretty = "^1.2.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
